--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   provider: ^6.0.5
   cloud_firestore: ^4.5.0
   firebase_auth: ^4.4.0
+  firebase_storage: ^11.1.0
 
 dev_dependencies:
   flutter_test:
